--- a/package.json
+++ b/package.json
@@ -16,19 +16,28 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
+    "blob-stream": "^0.1.3",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^10.11.2",
     "html-pdf": "^3.0.1",
+    "jspdf": "^2.5.1",
     "next": "13.3.0",
+    "nodemailer": "^6.9.1",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
     "puppeteer": "^19.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stream-to-blob": "^2.0.1",
     "typescript": "5.0.4",
     "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@types/html-pdf": "^3.0.0"
+    "@types/blob-stream": "^0.1.30",
+    "@types/html-pdf": "^3.0.0",
+    "@types/nodemailer": "^6.4.7",
+    "@types/pdfkit": "^0.12.9"
   }
 }
